# edgar-db

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
TODO/: TODO.md
db/: README.md
db/scripts/: download.sh  edgar_db_download.sh  edgar_db_show.sh  info.sh  secmaster_db_download.sh  secmaster_db_download_index.sh  secmaster_db_info.sh  secmaster_db_search.sh  secmaster_db_show.sh  show.sh  yfinance_db_download.sh  yfinance_db_info.sh  yfinance_db_show.sh
db/src/edgar_db/: __init__.py  __main__.py  cli.py  db.py  downloader.py  sp500.py  xbrl_tags.py
db/src/secmaster_db/: __init__.py  __main__.py  cli.py  client.py  config.py  db.py  downloader.py  indexes.py  models.py  parser.py  query.py
db/src/yfinance_db/: __init__.py  __main__.py  cli.py  client.py  config.py  db.py  downloader.py  models.py  parser.py  query.py
db/tests/: conftest.py  test_cli.py  test_client.py  test_db.py  test_parser.py  test_query.py
db/tests/test_secmaster/: conftest.py  test_cli.py  test_client.py  test_db.py  test_indexes.py  test_parser.py  test_query.py
db/tests/test_yfinance/: conftest.py  test_cli.py  test_client.py  test_db.py  test_parser.py  (+1 more)
docs/: quant_charts.drawio
journal/: journal-20260207.md
src/edgar_db/: client.py  config.py  models.py  parser.py  query.py  sp500.py
tests/: test_client.py
tests/fixtures/: company_facts_sample.json
ui/: README.md
ui/backend/: app.py  schemas.py
ui/frontend/: api_client.py
ui/tests/: conftest.py  test_api_client.py  test_charts.py  test_download.py  test_health.py  test_metrics.py  test_statements.py
(+8 files in other folders)
