[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-db"
version = "0.1.0"
description = "Download SEC EDGAR financial data into SQLite for AI and quantitative analysis"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "pandas>=2.0",
    "lxml>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
ui = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "httpx>=0.27",
]
yfinance = [
    "yfinance>=0.2.36",
]
all = [
    "edgar-db[api,ui,yfinance]",
]

[project.scripts]
edgar-db = "edgar_db.cli:cli"
yfinance-db = "yfinance_db.cli:cli"

[tool.setuptools.packages.find]
where = ["db/src", "ui/src"]
include = ["edgar_db*", "edgar_ui*", "yfinance_db*"]